# Anuvaad-AI

./: .gitignore  .replit  app.py  app_requirements.txt  article_to_podcast.py  audio_processor.py  backend.py  dubbing_service.py  elevenlabs_dubbing.py  models.py  package-lock.json  replit.md  run-frontend.sh  setup_guide.txt  start-frontend.sh  story_generator.py  sync_engine.py  translation_service.py  utils.py
Anuvaad-AI-Finally-Done/: .env  README.md  package.json  pyproject.toml  requirements.txt  start.py  video_processor.py  youtube_summarizer.py
Anuvaad-AI-Finally-Done/.local/state/replit/agent/filesystem/: filesystem_state.json
Anuvaad-AI-Finally-Done/.streamlit/: config.toml
Anuvaad-AI-Finally-Done/attached_assets/: news_podcast_1760030436850.py
Anuvaad-AI-Finally-Done/frontend/src/: App.css  App.jsx  AuthContext.jsx  index.css
Anuvaad-AI-Finally-Done/frontend/src/components/: ArticleToPodcast.jsx  FAQ.jsx  FeatureCard.css  FeatureCard.jsx  FeatureRow.css  FeatureRow.jsx  Footer.jsx  Header.jsx  Hero.css  Modal.css  Reasons.jsx  SearchBar.css  SpeechToText.jsx  TextToSpeech.jsx  VideoDubbing.jsx  YoutubeSummarizer.jsx
Anuvaad-AI-Finally-Done/instance/: anuvaad_ai.db
attached_assets/: DeepDub AI Synopsis_1759667374502.docx  Pasted-Create-a-Netflix-like-UI-design-for-my-web-application-The-design-should-emulate-the-Netflix-websit-1760437781175_1760437781190.txt  news_podcast_1760030436850.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: api.js
frontend/src/components/: FAQ.css  FeatureModal.jsx  Footer.css  Hero.jsx  (+7 more)
