[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.16.0",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.41.0",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.3.3",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.1",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.50.0",
    "whisper>=1.1.10",
    "yt-dlp>=2025.9.26",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "psycopg2-binary>=2.9.11",
    "werkzeug>=3.1.3",
]
